--- a/src/main/resources/templates/user_blog.html
+++ b/src/main/resources/templates/user_blog.html
@@ -38,7 +38,7 @@
 </nav>
 
 <!--中间内容-->
-<div class="m-container-small m-padded-tb-big animate__fadeIn" id="contentDiv">
+<div class="m-container-mm m-padded-tb-big animate__fadeIn">
     <div class="ui container">
         <!--        头部-->
         <div class="ui top attached segment">
@@ -529,13 +529,13 @@ h5,h6{font-size:1em;}
                         <div class="comments">
                             <div class="comment" th:each="comment : ${blog.comments}">
                                 <a class="avatar">
-                                    <img src="https://unsplash.it/100/100?image=1005" th:src="@{${comment.avatar}}">
+                                    <img src="../static/images/IMG_2562.JPG" th:src="@{${comment.avatar}}">
                                 </a>
-                                <div class="content" style="">
+                                <div class="content">
                                     <a class="author">
                                         <span th:text="${comment.nickname}">Matt</span>
                                         <div class="ui mini basic blue left pointing label m-padded-mini"
-                                             th:if="${comment.adminComment}">BolgHost
+                                             th:if="${comment.adminComment}">作者
                                         </div>
                                     </a>
                                     <div class="metadata">
@@ -550,11 +550,38 @@ h5,h6{font-size:1em;}
                                     data-commentNickname=${comment.nickname}" onclick="reply(this)">回复</a>
                                     </div>
                                 </div>
+                                <!-- 子集评论 -->
+                                <div cLass="comments">
+                                    <div class=" comment">
+                                        <a class="avatar">
+                                            <img src="../static/images/IMG_6230.JPG" th:src="@{${comment.avatar}}">
+                                        </a>
+                                        <div class="content">
+                                            <a class="author">
+                                                <span th:text="${comment.nickname}">Matt</span>
+                                                <div class="ui mini basic blue left pointing label m-padded-mini"
+                                                     th:if="${comment.adminComment}">作者
+                                                </div>
+                                            </a>
+                                            <div class="metadata">
+                                        <span class="date"
+                                              th:text="${#dates.format(comment.createTime, 'yyyy-MM-dd  HH:mm')}">Today at 5:42PM</span>
+                                            </div>
+                                            <div class="text" th:text="${comment.content}">
+                                                How artistic!
+                                            </div>
+                                            <div class="actions">
+                                                <a class="reply" data-commentId="1" data-commentNickname="Matt" th:attr="data-commentId=${comment.id},
+                                    data-commentNickname=${comment.nickname}" onclick="reply(this)">回复</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <!--/*-->
-                            <div class="comment">
+                            <div class="comment" th:each="comment : ${blog.comments}">
                                 <a class="avatar">
-                                    <img src="../static/images/IMG_2562.JPG" th:src="@{/images/IMG_2562.JPG}">
+                                    <img src="https://unsplash.it/100/100?image=1005" th:src="@{${comment.avatar}}">
                                 </a>
                                 <div class="content">
                                     <a class="author">Elliot Fu</a>
@@ -566,26 +593,6 @@ h5,h6{font-size:1em;}
                                     </div>
                                     <div class="actions">
                                         <a class="reply">回复</a>
-                                    </div>
-                                </div>
-                                <!-- 子集评论 -->
-                                <div cLass="comments">
-                                    <div class=" comment">
-                                        <a class="avatar">
-                                            <img src="../static/images/IMG_6230.JPG" th:src="@{/images/IMG_6230.JPG}">
-                                        </a>
-                                        <div class="content">
-                                            <a cLass=" author">Jenny Hess</a>
-                                            <div class="metadata">
-                                                <span class="date'">Just now</span>
-                                            </div>
-                                            <div class="text">
-                                                Elliot you are always so right :)
-                                            </div>
-                                            <div class="actions">
-                                                <a class="reply">回复</a>
-                                            </div>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
