--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -531,60 +531,99 @@ h5,h6{font-size:1em;}
                         <h3 class="ui dividing header">评论区</h3>
                         <!--循环每一条评论-->
                         <div class="comments">
-                            <div class="comment" th:each="comment : ${blog.comments}"
-                                 th:if="${comment.parentCommentId == null}">
+                            <div class="comment" th:each="comment : ${blog?.comments}"
+                                 th:if="${comment?.parentCommentId == null}">
                                 <a class="avatar">
                                     <img src="../static/images/IMG_2562.JPG" th:src="@{${comment?.avatar}}">
                                 </a>
                                 <div class="content">
-                                    <a class="author" th:href="@{/userOtherAbout/{id}(id = ${blog.user.id})}">
-                                        <span th:text="${comment.nickname}">Kafka</span>
-                                        <div class="ui mini basic blue left pointing label m-padded-small"
-                                             th:if="${comment.adminComment}">作者
-                                        </div>
-                                    </a>
+                                    <th:block
+                                            th:with="targetUrl = ${comment.hostId == session.user?.id ? '/about' : '/userOtherAbout/' + comment.hostId}">
+                                        <a class="author" th:href="@{__${targetUrl}__}"
+                                           target="_blank">
+                                            <span th:text="${comment?.nickname}">Kafka</span>
+                                            <div class="ui mini basic blue left pointing label m-padded-mini"
+                                                 th:if="${comment?.adminComment}">作者
+                                            </div>
+                                        </a>
+                                    </th:block>
                                     <div class="metadata">
                                         <span class="date"
-                                              th:text="${#dates.format(comment.createTime, 'yyyy-MM-dd  HH:mm')}">Today at 5:42PM</span>
+                                              th:text="${#dates.format(comment?.createTime, 'yyyy-MM-dd  HH:mm')}">Today at 5:42PM</span>
                                     </div>
-                                    <div class="text" th:text="${comment.content}">
+                                    <div class="text" th:text="${comment?.content}">
                                         How artistic!
                                     </div>
                                     <div class="actions">
-                                        <a class="reply" data-commentid="1" data-commentnickname="Kafka" th:attr="data-commentid=${comment.id},
-                                    data-commentnickname=${comment.nickname}" onclick="reply(this)">回复</a>
-
+                                        <a class="reply" data-commentid="1" data-commentnickname="Kafka"
+                                           th:attr="data-commentid=${comment?.id},
+                                           data-commentnickname=${comment?.nickname}" onclick="reply(this)">回复</a>
                                     </div>
                                 </div>
                                 <!-- 子集评论 -->
                                 <div cLass="comments">
-                                    <div class="comment" th:each="sub : ${comment.childComment}">
+                                    <div class="comment" th:each="sub : ${comment?.childComment}">
                                         <a class="avatar">
                                             <img src="../static/images/IMG_6230.JPG" th:src="@{${sub?.avatar}}">
                                         </a>
                                         <div class="content">
-                                            <a class="author" th:href="@{/userOtherAbout/{id}(id = ${blog.user.id})}">
-                                                <span th:text="${sub.nickname}">Matt</span>
-                                                <div class="ui mini basic blue left pointing label m-padded-small"
-                                                     th:if="${sub.adminComment}" style="align-content: center">作者
-                                                </div>
-                                            </a>
-                                            <span th:text="|@ ${sub.parentNickname}|"
+                                            <th:block
+                                                    th:with="targetUrl = ${sub.hostId == session.user?.id ? '/about' : '/userOtherAbout/' + sub.hostId}">
+                                                <a class="author" th:href="@{__${targetUrl}__}"
+                                                   target="_blank">
+                                                    <span th:text="${sub?.nickname}">Matt</span>
+                                                    <div class="ui mini basic blue left pointing label m-padded-small"
+                                                         th:if="${sub?.adminComment}" style="align-content: center">作者
+                                                    </div>
+                                                </a>
+                                            </th:block>
+                                            <span th:text="|@ ${sub?.parentNickname}|"
                                                   class="ui mini basic label m-padded-small"
                                                   style="align-content: center; color: #0c5460">@ 小白</span>
                                             <div class="metadata">
                                                 <span class="date"
-                                                      th:text="${#dates.format(comment.createTime, 'yyyy-MM-dd  HH:mm')}">Today at 5:42PM</span>
+                                                      th:text="${#dates.format(sub?.createTime, 'yyyy-MM-dd  HH:mm')}">Today at 5:42PM</span>
                                             </div>
-                                            <div class="text" th:text="${sub.content}">
+                                            <div class="text" th:text="${sub?.content}">
                                                 How artistic!
                                             </div>
                                             <div class="actions">
-                                                <a class="reply" data-commentId="1" data-commentNickname="Matt"
-                                                   th:attr="data-commentId=${sub.id},
-                                    data-commentNickname=${sub.nickname}" onclick="reply(this)">回复</a>
+                                                <a class="reply" data-commentid="1" data-commentnickname="Matt"
+                                                   th:attr="data-commentid=${sub?.parentCommentId},
+                                                   data-commentnickname=${sub?.nickname}" onclick="reply(this)">回复</a>
                                             </div>
                                         </div>
+                                        <!-- 孙评论 -->
+                                        <!--<div class="comment" th:each="grand : ${sub?.grandSonComment}">
+                                            <a class="avatar">
+                                                <img src="../static/images/IMG_6230.JPG" th:src="@{${grand?.avatar}}">
+                                            </a>
+                                            <div class="content">
+                                                <a class="author"
+                                                   th:href="@{/userOtherAbout/{id}(id = ${grand?.hostId})}"
+                                                   target="_blank">
+                                                    <span th:text="${grand?.nickname}">Matt</span>
+                                                    <div class="ui mini basic blue left pointing label m-padded-small"
+                                                         th:if="${grand?.adminComment}" style="align-content: center">作者
+                                                    </div>
+                                                </a>
+                                                <span th:text="|@ ${grand?.parentNickname}|"
+                                                      class="ui mini basic label m-padded-small"
+                                                      style="align-content: center; color: #0c5460">@ 小白</span>
+                                                <div class="metadata">
+                                                <span class="date"
+                                                      th:text="${#dates.format(grand?.createTime, 'yyyy-MM-dd  HH:mm')}">Today at 5:42PM</span>
+                                                </div>
+                                                <div class="text" th:text="${grand?.content}">
+                                                    How artistic!
+                                                </div>
+                                                <div class="actions">
+                                                    <a class="reply" data-commentid="1" data-commentnickname="Matt"
+                                                       th:attr="data-commentid=${grand?.id},
+                                                   data-commentnickname=${grand?.nickname}" onclick="reply(this)">回复</a>
+                                                </div>
+                                            </div>
+                                        </div>-->
                                     </div>
                                 </div>
                             </div>
@@ -629,18 +668,14 @@ h5,h6{font-size:1em;}
                 </div>
             </div>
             <div id="comment-form" class="ui form">
-                <form action="/dev/comments/save" method="post">
-                    <!--在博客里面加入条隐含域-->
-                    <input type="hidden" name="id" th:value="${blog.id}">
-                    <div id="md-content" class="field">
-                        <textarea name="content" placeholder="请输入评论..."></textarea>
-                    </div>
-                    <div class="field m-margin-buttom-mini m-mobile-wide m-right-bottom">
-                        <button type="submit" id="myButton"
-                                class="ui teal basic button m-margin-buttom-mini m-mobile-wide">发布
-                        </button>
-                    </div>
-                </form>
+                <div class="field">
+                    <textarea name="content" placeholder="请输入评论..."></textarea>
+                </div>
+                <div class="field m-margin-buttom-mini m-mobile-wide m-right-bottom">
+                    <button type="button" id="myButton" onclick="requestLogin(this)"
+                            class="ui teal basic button m-margin-buttom-mini m-mobile-wide">发布
+                    </button>
+                </div>
             </div>
         </div>
     </div>
@@ -650,7 +685,7 @@ h5,h6{font-size:1em;}
     <div class="ui vertical icon buttons">
         <button type="button" class="ui toc blue button">目录</button>
         <a href="#" th:href="@{/feedback}" class="ui blue button">反馈</a>
-        <a href="#comment-container" class="ui button"><i class="edit icon"></i></a>
+        <a href="#comment-form" class="ui button"><i class="edit icon"></i></a>
         <a class="ui icon button"><i class="heart icon"></i></a>
         <a id="toTop-button" class="ui button"><i class="chevron up icon"></i></a>
     </div>
@@ -712,6 +747,27 @@ h5,h6{font-size:1em;}
     </div>
 </footer>
 
+<div class="ui basic modal">
+    <div class="ui icon header">
+        <i class="users icon"></i>
+        用户登录
+    </div>
+    <div class="content">
+        <p>你还没有登录账号，无法评论哦！</p>
+        <p>现在去登录吧~</p>
+    </div>
+    <div class="actions">
+        <div class="ui red basic cancel inverted button">
+            <i class="remove icon"></i>
+            取消
+        </div>
+        <div class="ui green ok inverted button" id="loginButton">
+            <i class="checkmark icon"></i>
+            确认
+        </div>
+    </div>
+</div>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.3/jquery.scrollTo.min.js"></script>
@@ -751,11 +807,13 @@ h5,h6{font-size:1em;}
         $(window).scrollTo(0, 500);
     });
 
-    $('#myButton').submit((event) => {
-        event.preventDefault(); // 阻止默认提交行为
-        this.submit();
-        clearContent();
-    })
+    function requestLogin(button) {
+        $('.ui.basic.modal').modal('show');
+
+        $('#loginButton').on('click', function () {
+            window.location.href = '/dev/login'; // 跳转到登录页面，这里的URL根据实际情况替换
+        });
+    }
 
     function clearContent() {
         $("[name='content']").val('');
