--- a/src/main/resources/templates/friends.html
+++ b/src/main/resources/templates/friends.html
@@ -4,37 +4,44 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>我的好友</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css"/>
+  <link rel="stylesheet" href="../static/lib/semantic/semantic.min.css">
+  <link rel="stylesheet" href="https://fastly.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css"/>
   <link rel="stylesheet" href="../static/css/animate.css" th:href="@{/css/animate.css}">
   <link rel="stylesheet" href="../static/css/me.css" th:href="@{/css/me.css}">
 </head>
-<body>
+<body class="archiveBody">
 
 <!--导航-->
-<nav th:replace="_fragments_login :: menu(4)" class="ui inverted attached segment m-padded-tb-mini">
+<nav class="gird-header">
   <div class="ui container"> <!-- 加一个容器 -->
     <div class="ui inverted secondary stackable menu"> <!-- 菜单 stackable:可堆叠的,表示屏幕小时自动堆叠-->
       <h2 class="ui white header item">GuideSystem</h2> <!-- 蓝绿色标题 -->
-      <a href="#" class="m-item m-mobile-hide item"><i class="home icon"></i>首页</a> <!-- icon表示图表 -->
-      <a href="#" class="m-item m-mobile-hide item"><i class="edit outline icon"></i>记录</a>
-      <a href="#" class="m-item m-mobile-hide item"><i class="info icon"></i>我的</a>
+      <a href="#" th:href="@{/user_index}" class="m-item m-mobile-hide item" th:classappend="${n==1} ? 'active' "><i
+          class="home icon"></i>首页</a> <!-- icon表示图表 -->
+      <a href="#" th:href="@{/user_forum}" class="m-item m-mobile-hide item" th:classappend="${n==2} ? 'active' "><i
+          class="comments icon"></i>论坛</a>
+      <a href="#" th:href="@{/user_types/-1}" class="m-item m-mobile-hide item" th:classappend="${n==3} ? 'active' "><i
+          class="idea icon"></i>分类</a>
+      <a href="#" th:href="@{/about}" class="m-item m-mobile-hide item" th:classappend="${n==4} ? 'active' "><i
+          class="info icon"></i>我的</a>
       <div class="m-top-right m-mobile-hide item m-item" style="margin-top: 5px"> <!-- 靠右 -->
-        <div class="ui icon input">
-          <input type="text" placeholder="Search...">
-          <i class="search link icon"></i>
-        </div>
+        <form name="search" method="get" action="#" th:action="@{/user_search}" target="_blank">
+          <div class="ui icon input">
+            <input type="text" name="query" placeholder="Search..." th:value="${query}">
+            <i onclick="document.forms['search'].submit()" class="search link icon"></i>
+          </div>
+        </form>
         <div class="ui dropdown item">
           <div class="text">
-            <img src="../static/images/店铺1.jpg" th:src="@{/images/IMG_6361.JPG}"
+            <img src="../static/images/店铺1.jpg" th:src="@{${session.user?.avatar}}"
                  alt="" class="ui avatar image">
           </div>
           <i class="dropdown icon"></i>
           <div class="menu">
-            <a href="#" th:href="@{/login/exit}" class="item">足迹</a>
-            <a href="#" th:href="@{/login}" class="item">我的</a>
+            <a href="#" th:href="@{/about}" class="item">我的</a>
             <a href="#" th:href="@{/edit/password}" class="item">修改密码</a>
             <a href="#" th:href="@{/login/exit}" class="item">退出</a>
+            <a href="#" th:href="@{/login/delete}" class="item">注销</a> <!--得更新-->
           </div>
         </div>
       </div>
@@ -45,10 +52,10 @@
   </a>
 </nav>
 
-<div class="m-container-large m-margin-top-large animate__fadeIn" id="contentDiv">
+<div class="ui m-container-plus m-margin-top-large animate__fadeIn" style="padding-bottom: 2em !important; margin-top: 5em !important;">
   <div class="ui stackable grid">
     <div class="eleven wide column">
-      <div class="ui container segment m-margin-buttom-large">
+      <div class="ui container transparent-segment segment m-margin-buttom-large">
         <!-- 数据统计 -->
         <div class="ui three statistics" style="margin-top: 40px">
           <div class="statistic">
@@ -112,6 +119,18 @@
               </div>
             </div>
           </div>
+          <div class="item">
+            <a class="ui tiny image">
+              <img src="../static/images/avatar/jenny.jpg">
+            </a>
+            <div class="content">
+              <a class="header">Stevie Feliciano</a>
+              <div class="description">
+                <p>Stevie Feliciano is a <a>library scientist</a> living in New York City. She likes to spend her time
+                  reading, running, and writing.</p>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="ui search m-top-right" style="margin-right: 15px; margin-top: 10px">
           <div class="ui icon input">
@@ -123,7 +142,7 @@
       </div>
     </div>
     <div class="five wide column">
-      <div class="ui container segment">
+      <div class="ui container transparent-segment segment">
         <div class="ui relaxed list">
           <div class="item">
             <img class="ui avatar image" src="../static/images/avatar/joe.jpg">
@@ -281,7 +300,7 @@
     删除好友
   </div>
   <div class="ui large aligned divided list" style="margin: 0px">
-    <div class="item centering example" style="padding: 10px">
+    <div class="item centering example" style="padding: 12px">
       <div class="right floated content">
         <div class="ui icon button">查看主页</div>
         <div class="ui yellow icon button">删除Ta</div>
@@ -326,10 +345,10 @@
   </div>
 </div>
 
-<footer class="ui inverted vertical segment m-padded-tb-massive footer-class"
-        style="position: relative; width: 100%; height: 328px;"> <!-- vertical:垂直的 segment:条横 inverted:倒置的 -->
-  <div class="ui center aligned container"> <!-- center aligned:居中 aligned:使成为一条线-->
-    <div class="ui inverted divided stackable grid"> <!-- inverted divided grid:格线分成16份 -->
+<!--<footer class="ui inverted vertical segment m-padded-tb-massive footer-class"
+        style="position: relative; width: 100%; height: 328px;"> &lt;!&ndash; vertical:垂直的 segment:条横 inverted:倒置的 &ndash;&gt;
+  <div class="ui center aligned container"> &lt;!&ndash; center aligned:居中 aligned:使成为一条线&ndash;&gt;
+    <div class="ui inverted divided stackable grid"> &lt;!&ndash; inverted divided grid:格线分成16份 &ndash;&gt;
       <div class="three wide column">
         <h4 class="ui inverted header m-text-thin">消费者维权</h4>
         <div class="ui inverted link list">
@@ -340,7 +359,7 @@
         </div>
       </div>
 
-      <!-- 分成三列 -->
+      &lt;!&ndash; 分成三列 &ndash;&gt;
       <div class="three wide column">
         <h4 class="ui inverted header m-text-thin">服务</h4>
         <div class="ui inverted link list">
@@ -350,7 +369,7 @@
         </div>
       </div>
 
-      <!-- 分成三列 -->
+      &lt;!&ndash; 分成三列 &ndash;&gt;
       <div class="three wide column">
         <h4 class="ui inverted header m-text-thin">联系我</h4>
         <div class="ui inverted link list">
@@ -359,7 +378,7 @@
         </div>
       </div>
 
-      <!-- 分成七列 -->
+      &lt;!&ndash; 分成七列 &ndash;&gt;
       <div class="seven wide column">
         <h4 class="ui inverted header m-text-thin">关于我们</h4>
         <p class="m-text-thin m-text-spaced m-opacity-tiny">
@@ -372,10 +391,10 @@
     <div class="ui inverted section divider"></div>
     <p class="m-text-thin m-text-spaced m-opacity-tiny">版权 @ 2023-07-04 设计 软件214项目组</p>
   </div>
-</footer>
+</footer>-->
 
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="../static/lib/semantic/semantic.min.js"></script>
 
 <script>
     $('#hottest').click(() => {
@@ -393,24 +412,6 @@
     $('#deleteFriend').on('click', function () {
         $('.ui.deleteFriend.modal').modal('show');
     })
-
-    window.addEventListener('resize', function () {
-        let myDiv = document.getElementById('contentDiv');
-        if (myDiv.clientHeight < 550) {
-            myDiv.style.height = '550px';
-        } else {
-            // 如果之前已经设置了固定的550px高度，这里可以取消设置以恢复原始高度
-            myDiv.style.height = '';
-        }
-    });
-
-    // 页面加载完成后执行一次检查
-    (function () {
-        let myDiv = document.getElementById('contentDiv');
-        if (myDiv.clientHeight < 550) {
-            myDiv.style.height = '550px';
-        }
-    })();
 
     // 静态数据
     const data = [
