--- a/src/main/resources/templates/personal_space.html
+++ b/src/main/resources/templates/personal_space.html
@@ -4,37 +4,44 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>个人空间</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css"/>
+  <link rel="stylesheet" href="../static/lib/semantic/semantic.min.css">
+  <link rel="stylesheet" href="https://fastly.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css"/>
   <link rel="stylesheet" href="../static/css/animate.css" th:href="@{/css/animate.css}">
   <link rel="stylesheet" href="../static/css/me.css" th:href="@{/css/me.css}">
 </head>
 <body class="archiveBody">
 
 <!--导航-->
-<nav th:replace="_fragments_login :: menu(4)" class="ui inverted attached segment m-padded-tb-mini">
+<nav class="gird-header">
   <div class="ui container"> <!-- 加一个容器 -->
     <div class="ui inverted secondary stackable menu"> <!-- 菜单 stackable:可堆叠的,表示屏幕小时自动堆叠-->
       <h2 class="ui white header item">GuideSystem</h2> <!-- 蓝绿色标题 -->
-      <a href="#" class="m-item m-mobile-hide item"><i class="home icon"></i>首页</a> <!-- icon表示图表 -->
-      <a href="#" class="m-item m-mobile-hide item"><i class="edit outline icon"></i>记录</a>
-      <a href="#" class="m-item m-mobile-hide item"><i class="info icon"></i>我的</a>
+      <a href="#" th:href="@{/user_index}" class="m-item m-mobile-hide item" th:classappend="${n==1} ? 'active' "><i
+          class="home icon"></i>首页</a> <!-- icon表示图表 -->
+      <a href="#" th:href="@{/user_forum}" class="m-item m-mobile-hide item" th:classappend="${n==2} ? 'active' "><i
+          class="comments icon"></i>论坛</a>
+      <a href="#" th:href="@{/user_types/-1}" class="m-item m-mobile-hide item" th:classappend="${n==3} ? 'active' "><i
+          class="idea icon"></i>分类</a>
+      <a href="#" th:href="@{/about}" class="m-item m-mobile-hide item" th:classappend="${n==4} ? 'active' "><i
+          class="info icon"></i>我的</a>
       <div class="m-top-right m-mobile-hide item m-item" style="margin-top: 5px"> <!-- 靠右 -->
-        <div class="ui icon input">
-          <input type="text" placeholder="Search...">
-          <i class="search link icon"></i>
-        </div>
+        <form name="search" method="get" action="#" th:action="@{/user_search}" target="_blank">
+          <div class="ui icon input">
+            <input type="text" name="query" placeholder="Search..." th:value="${query}">
+            <i onclick="document.forms['search'].submit()" class="search link icon"></i>
+          </div>
+        </form>
         <div class="ui dropdown item">
           <div class="text">
-            <img src="../static/images/店铺1.jpg" th:src="@{/images/IMG_6361.JPG}"
+            <img src="../static/images/店铺1.jpg" th:src="@{${session.user?.avatar}}"
                  alt="" class="ui avatar image">
           </div>
           <i class="dropdown icon"></i>
           <div class="menu">
-            <a href="#" th:href="@{/login/exit}" class="item">足迹</a>
-            <a href="#" th:href="@{/login}" class="item">我的</a>
+            <a href="#" th:href="@{/about}" class="item">我的</a>
             <a href="#" th:href="@{/edit/password}" class="item">修改密码</a>
             <a href="#" th:href="@{/login/exit}" class="item">退出</a>
+            <a href="#" th:href="@{/login/delete}" class="item">注销</a> <!--得更新-->
           </div>
         </div>
       </div>
@@ -45,7 +52,7 @@
   </a>
 </nav>
 
-<div class="ui container transparent-segment segment">
+<div class="ui container transparent-segment segment m-margin-tb" style="padding-bottom: 2em !important; margin-top: 5em !important;">
   <div class="ui search m-top-right" style="margin-right: 20px; margin-top: 20px">
     <div class="ui icon input">
       <input class="prompt" type="text" placeholder="搜索好友...">
@@ -201,15 +208,20 @@
 </div>
 <br><br>
 
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="../static/lib/semantic/semantic.min.js"></script>
 <script src="../static/lib/waypoints/jquery.waypoints.min.js"
         th:src="@{/lib/waypoints/jquery.waypoints.min.js}"></script>
 
 <!--第一种多人物的看板娘，缓存慢-->
-<script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget/autoload.js"></script>
+<script src="https://fastly.jsdelivr.net/gh/stevenjoezhang/live2d-widget/autoload.js"></script>
 
 <script>
+
+    $('.menu.toggle').click(function () {
+        $('.m-item').toggleClass('m-mobile-hide');
+    });
+
     var content = [
         { title: 'Andorra' },
         { title: 'United Arab Emirates' },
@@ -237,9 +249,11 @@
         { title: 'Burundi' }
         // etc
     ];
+
     $('.ui.search').search({
         source: content
     });
+
 </script>
 </body>
 </html>
