--- a/src/main/resources/static/css/me.css
+++ b/src/main/resources/static/css/me.css
@@ -569,6 +569,21 @@ legend {
     font-family: 'STXingkai';
 }
 
+/*-----------友人帐----------*/
+
+.friends-link{
+    width: 160px;
+    height: 220px;
+    border: 1px solid #999;
+    box-shadow: 5px 5px 5px #999;
+    border-radius:8px;
+}
+
+.friends-link-image{
+    width: 158px;
+    height: 170px;
+    border-radius: 8px 8px 0px 0px;
+}
 
 /*-----------遮罩层----------*/
 
@@ -629,7 +644,7 @@ legend {
 
 .m-bg-class_cover {
     width: 100%;
-    height: 800px;
+    height: 775px;
     line-height: 50px;
     padding-left: 6px;
     /*这里是阴影设置的颜色做后一个0是阴影不透明度*/
