--- a/src/main/resources/templates/friends_record.html
+++ b/src/main/resources/templates/friends_record.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>友人帐</title>
+  <title>友人聊天室</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
   <link rel="stylesheet" href="https://fastly.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css"/>
   <link rel="stylesheet" href="../static/css/animate.css" th:href="@{/css/animate.css}">
@@ -53,13 +53,13 @@
 </nav>
 
 <!--顶部图片-->
-<div class="m-bg-type_outer" style="width: 100%; height: 40%">
+<div class="m-bg-type_outer" style="width: 100%; height: 35%">
   <img src="../static/images/friendsbg.jpg" th:src="@{/images/friendsbg.jpg}" alt="" class="ui m-bg image"
-       style="width: 100%;height: 100%;opacity: 0.7">
+       style="width: 100%; opacity: 0.7">
   <div class="m-bg-class_cover">
     <div align="center">
       <div class="ui container" align="center" style="position: relative ;bottom: -540px;">
-        <div class="m-font-size-title " align="center" style="font-family:'STXingkai'">友人帐</div>
+        <div class="m-font-size-title " align="center" style="font-family:'STXingkai'">友人聊天室</div>
         <div class="m-font-size-text-init-title m-margin-top" align="center">
           转瞬即逝的相逢与离别，每一个瞬间，我都想要珍惜
         </div>
@@ -73,34 +73,74 @@
 <div class="m-margin- animated animate__fadeIn">
   <div class="ui m-opacity container">
     <div class="box-shadow-max">
-      <div class="ui segment m-padded-tb-large m-opacity">
-        <div class="ui container">
-          <div class="" style="font-size: 35px;font-weight: bold" align="center">友人入帐须知</div>
-          <ui class="list">
-            <div class="m-margin-left-mini m-margin-tb-tiny" style="font-size: large;font-weight: bold">网站要求</div>
-            <br>
-            <li class="m-margin-left-big m-margin-tb-tiny" style="font-size: medium">
-              无色情内容，无政治敏感内容，网站要能长期正常访问
-            </li>
-            <li class="m-margin-left-big m-margin-tb-tiny" style="font-size: medium">
-              二十篇以上个人原创文章，两个月内有新文章更新
-            </li>
-            <li class="m-margin-left-big m-margin-tb-tiny" style="font-size: medium">原创博客、技术博客、游记博客优先</li>
-            <li class="m-margin-left-big m-margin-tb-tiny" style="font-size: medium">
-              需要交换友链，先把本站添加到你的网站中，然后根据下面的格式，给我发email或在留言板给我留言~
-            </li>
-            <br>
-            <div class="m-margin-left-mini m-margin-tb-tiny" style="font-size: large;font-weight: bold">申请格式</div>
-            <br>
-            <li class="m-margin-left-big m-margin-tb-tiny" style="font-size: medium">博客标题：清峰</li>
-            <li class="m-margin-left-big m-margin-tb-tiny" style="font-size: medium">
-              博客地址：https://qingfeng.fair.net.cn/
-            </li>
-            <li class="m-margin-left-big m-margin-tb-tiny" style="font-size: medium">
-              图片地址：https://qingfeng.fair.net.cn/images/me.jpg
-            </li>
-          </ui>
+      <div class="ui m-container-mm segment m-padded-tb-large m-opacity"
+           style="position: relative; height: 56em !important; overflow-y: scroll;">
+        <div class="" style="font-size: 35px;font-weight: bold" align="center">好友：Kafka</div>
+
+        <!-- 聊天记录区域 -->
+        <div class="ui m-container m-margin-top-large">
+          <div class="ui divided items chat-history" style="min-height: 494px !important;">
+            <div class="item left aligned">
+              <img class="ui circular image avatar ta" src="../static/images/friend_record_1.jpg" alt="Kafka's Avatar">
+              <div class="content">
+                <div class="bubble ta">
+                  <p>你好，这是我的第一条消息。</p>
+                  <div class="meta">
+                    <span>昨天 20:30</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- 我的消息 -->
+            <div class="item right aligned reply">
+              <div class="content">
+                <img class="ui circular image avatar me" src="../static/images/friend_record_3.jpg" alt="My Avatar">
+                <div class="bubble me">
+                  <p>你好，Kafka！这是你的回复。</p>
+                  <div class="meta">
+                    <span class="date">今天 10:00</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="item right aligned reply">
+              <div class="content">
+                <a><img class="ui circular image avatar me" src="../static/images/friend_record_3.jpg" alt="My Avatar"></a>
+                <div class="bubble me">
+                  <p>你好，Kafka！这是你的回复。</p>
+                  <div class="meta">
+                    <span class="date">今天 10:00</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="item right aligned reply">
+              <div class="content">
+                <img class="ui circular image avatar me" src="../static/images/friend_record_3.jpg" alt="My Avatar">
+                <div class="bubble me">
+                  <p>你好，Kafka！这是你的回复。</p>
+                  <div class="meta">
+                    <span class="date">今天 10:00</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- 更多聊天记录... -->
+          </div>
         </div>
+
+
+        <!-- 输入与发送消息区域 -->
+        <div class="ui form message-input-area">
+          <div class="field">
+            <textarea rows="2" placeholder="在此输入您的消息"></textarea>
+          </div>
+          <div class="ui fluid labeled icon button send-message-btn">
+            <i class="paper plane outline icon"></i>
+            发送
+          </div>
+        </div>
+
       </div>
     </div>
 
@@ -109,32 +149,110 @@
       <div class="ui top attached teal m-opacityFriendImg segment box-shadow-max">
         <div class="ui m-padded-tb-large m-container-mm">
           <div class="ui stackable m-container-mini m-opacityFriendImg grid">
-
             <!--友人帐显示区域-->
             <div class="m-margin-tb-tiny four wide column" th:each="friendlink : ${friendlinks}">
-              <a href="#" class="class_outer" th:href="@{${friendlink.blogaddress}}" target="_blank">
+              <a href="#" class="class_outer" th:href="@{${friendlink.blogaddress}}">
                 <div align="center">
                   <div class="friends-link">
-                    <img src="../static/images/me.jpg" th:src="@{${friendlink.pictureaddress}}" alt=""
+                    <img src="../static/images/friend_record_1.jpg" th:src="@{${friendlink.pictureaddress}}" alt=""
                          class="friends-link-image" style="opacity: 1">
                     <div class="m-margin-top">
-                      <h4 class="m-font-size-text-friends m-margin-tb-tiny" th:text="${friendlink.blogname}">清峰</h4>
+                      <h4 class="m-font-size-text-friends m-margin-tb-tiny" th:text="${friendlink.blogname}">Kafka</h4>
                     </div>
                   </div>
                 </div>
               </a>
             </div>
-
+            <div class="m-margin-tb-tiny four wide column" th:each="friendlink : ${friendlinks}">
+              <a href="#" class="class_outer" th:href="@{${friendlink.blogaddress}}">
+                <div align="center">
+                  <div class="friends-link">
+                    <img src="../static/images/friend_record_3.jpg" th:src="@{${friendlink.pictureaddress}}" alt=""
+                         class="friends-link-image" style="opacity: 1">
+                    <div class="m-margin-top">
+                      <h4 class="m-font-size-text-friends m-margin-tb-tiny" th:text="${friendlink.blogname}">断背山</h4>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
           </div>
         </div>
       </div>
     </div>
-
   </div>
 </div>
+<br>
 
-<br>
-<br>
+<style>
+    /* 自定义样式 */
+    .chat-history {
+        height: calc(100% - 7em);
+        padding-bottom: 1em;
+    }
+
+    .avatar {
+        width: 40px;
+        height: 40px;
+        margin-right: 1em;
+    }
+
+    .bubble {
+        background-color: #F5F5F5;
+        border-radius: 10px;
+        padding: 10px;
+        max-width: 75%;
+    }
+
+    .bubble.ta {
+        float: left; /* 让消息气泡和头像浮动到右侧 */
+    }
+
+    .avatar.ta {
+        float: left !important;
+        margin-left: 0;
+    }
+
+    .meta .date {
+        color: #999;
+    }
+
+    textarea {
+        resize: none;
+        width: 100%;
+    }
+
+    .send-message-btn {
+        margin-top: 0.5em;
+    }
+
+    /* 添加新的CSS样式 */
+    .message-input-area {
+        position: sticky;
+        bottom: 0;
+        background-color: white;
+        border-top: 1px solid #ddd;
+        box-sizing: border-box;
+        padding: 1em;
+        z-index: 1;
+    }
+
+    /* 针对右侧消息进行定制 */
+    .image.avatar.me {
+        direction: rtl; /* 将内容反转以使头像显示在右侧 */
+    }
+
+    .item.reply .content .bubble.me,
+    .item.reply .content .avatar {
+        margin-right: 1em;
+        float: right; /* 让消息气泡和头像浮动到右侧 */
+    }
+
+    .item.reply .content .avatar {
+        margin-left: 0.5em; /* 调整头像与消息之间的间距 */
+        margin-right: 0;
+    }
+</style>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
@@ -142,6 +260,10 @@
 <script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget/autoload.js"></script>
 
 <script>
+
+    $('.ui.dropdown').dropdown({
+        on: 'hover'
+    });
 
     $('.menu.toggle').click(function () {
         $('.m-item').toggleClass('m-mobile-hide');
