--- a/src/main/resources/templates/personal_space.html
+++ b/src/main/resources/templates/personal_space.html
@@ -206,7 +206,6 @@
     </div>
   </div>
 </div>
-<br><br>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="../static/lib/semantic/semantic.min.js"></script>
@@ -217,6 +216,10 @@
 <script src="https://fastly.jsdelivr.net/gh/stevenjoezhang/live2d-widget/autoload.js"></script>
 
 <script>
+
+    $('.ui.dropdown').dropdown({
+        on: 'hover'
+    });
 
     $('.menu.toggle').click(function () {
         $('.m-item').toggleClass('m-mobile-hide');
